WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300306
AVStreamDataParser incorrectly given to AVContentKeySession.removeContentKeyRecipient
https://bugs.webkit.org/show_bug.cgi?id=300306
Summary
AVStreamDataParser incorrectly given to AVContentKeySession.removeContentKeyR...
Jean-Yves Avenard [:jya]
Reported
2025-10-07 01:33:03 PDT
In SourceBufferPrivateAVFObjC, the AVStreamDataParser is provided to `AVContentKeySession.removeContentKeyRecipient` but it is never added in the first place.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-07 01:33:29 PDT
<
rdar://problem/162100592
>
Jean-Yves Avenard [:jya]
Comment 2
2025-10-07 01:45:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51931
EWS
Comment 3
2025-10-07 15:26:44 PDT
Committed
301169@main
(135d895ded31): <
https://commits.webkit.org/301169@main
> Reviewed commits have been landed. Closing PR #51931 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug