AVStreamDataParser incorrectly given to AVContentKeySession.removeContentKeyRecipient https://bugs.webkit.org/show_bug.cgi?id=300306 rdar://162100592

Reviewed by Jer Noble.

We incorrectly called removeContentKeyRecipient with the AVStreamDataParser
when it was never added in the first place (and doesn't need to be added).

No change in observable behaviours.

* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.h: Make member const.
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::~SourceBufferPrivateAVFObjC):
(WebCore::SourceBufferPrivateAVFObjC::removedFromMediaSource):
(WebCore::SourceBufferPrivateAVFObjC::destroyStreamDataParser): Deleted.

Canonical link: https://commits.webkit.org/301169@main